--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
+    "express-session": "^1.18.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
